tests/ui/derives/issue-97343.stderr
error[E0109]: type arguments are not allowed on type parameter `Irrelevant`
  --> $DIR/issue-97343.rs:4:23
   |
LL | #[derive(Debug)]
   |          -----
   |          |
   |          not allowed on type parameter `Irrelevant`
   |          in this derive macro expansion
LL | pub struct Irrelevant<Irrelevant> {
   |                       ^^^^^^^^^^ type argument not allowed
   |
note: type parameter `Irrelevant` defined here
  --> $DIR/issue-97343.rs:4:23
   |
LL | pub struct Irrelevant<Irrelevant> {
   |                       ^^^^^^^^^^
   = note: this error originates in the derive macro `Debug` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0210]: type parameter `Irrelevant` must be used as the type parameter for some local type (e.g., `MyStruct<Irrelevant>`)
  --> $DIR/issue-97343.rs:4:23
   |
LL | pub struct Irrelevant<Irrelevant> {
   |                       ^^^^^^^^^^ type parameter `Irrelevant` must be used as the type parameter for some local type
   |
   = note: implementing a foreign trait is only possible if at least one of the types for which it is implemented is local
   = note: only traits defined in the current crate can be implemented for a type parameter

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0109, E0210.
For more information about an error, try `rustc --explain E0109`.
